feat: 模型架构与实现

--- a/llm_from_zero.ipynb
+++ b/llm_from_zero.ipynb
@@ -3570,29 +3570,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 682,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# class ShortcutBlock(nn.Module):\n",
-    "#     def __init__(self, layers):\n",
-    "#         super().__init__()\n",
-    "#         self.layers = layers\n",
-    "\n",
-    "#     def forward(self, x):\n",
-    "#         for layer in self.layers:\n",
-    "#             # Compute the output of the current layer\n",
-    "#             layer_output = layer(x)\n",
-    "#             # Check if shortcut can be applied\n",
-    "#             if x.shape == layer_output.shape:\n",
-    "#                x = x + layer_output \n",
-    "#             else:\n",
-    "#                 x = layer_output\n",
-    "#         return"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3610,7 +3587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.5.1 单头因果自注意力机制"
+    "#### 单头因果自注意力机制"
    ]
   },
   {
@@ -3683,7 +3660,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.5.2 扩展到多头注意力"
+    "#### 扩展到多头注意力"
    ]
   },
   {
@@ -3787,7 +3764,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.6 实现Transformer"
+    "### 2.6 实现 `Transformer`"
    ]
   },
   {
