feat: 模型架构与实现

--- a/llm_from_zero.ipynb
+++ b/llm_from_zero.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 647,
+   "execution_count": 883,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 648,
+   "execution_count": 884,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 649,
+   "execution_count": 885,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,16 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 650,
+   "execution_count": 886,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 13, 16, 15, 15, 13]"
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 14, 15, 16, 14, 16]"
       ]
      },
-     "execution_count": 650,
+     "execution_count": 886,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 651,
+   "execution_count": 887,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 652,
+   "execution_count": 888,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 653,
+   "execution_count": 889,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 654,
+   "execution_count": 890,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": 891,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 656,
+   "execution_count": 892,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 657,
+   "execution_count": 893,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "'每一次努力都让你感动'"
       ]
      },
-     "execution_count": 657,
+     "execution_count": 893,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 658,
+   "execution_count": 894,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 659,
+   "execution_count": 895,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 660,
+   "execution_count": 896,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 661,
+   "execution_count": 897,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
        "'每一次努力都让你感动<|unk|>'"
       ]
      },
-     "execution_count": 661,
+     "execution_count": 897,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 898,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
+   "execution_count": 899,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
        "'每一滴汗水都是未来花朵的养分——在生命的旅途上，我们每个人都是自己故事中的主角。每一天，我们都面临着选择，每一个选择都是一条通往未知的道路。而在这无数的选择中，有一种选择是永恒不变的——那就是付出努力。每一次的努力，无论大小，都在悄然改变着我们的命运轨迹。它们累积起来，成为我们成长道路上最宝贵的财富。每一次努力都让你感动。这不仅仅是对个人成就的一种赞美，更是对坚持和毅力的颂扬。当我们看到运动员在赛场上挥洒汗水，科学家在实验室里日夜钻研，或是普通劳动者在岗位上默默耕耘时，我们内心深处都会被触动。这种感动源于对人类潜能的敬佩，以及对那些为了梦想而不惜一切代价的人们的尊重。未来的精彩由此慢慢绽放。就像一朵花从种子开始，在土壤中吸收养分，经过长时间的孕育，最终破土而出，展现出它的美丽一样。我们的未来也是这样，通过不断的努力，我们将积累起足够的力量，去迎接即将到来的挑战与机遇。每一次小小的进步，每一点微不足道的成功，都是通向更大辉煌的基石。在这个过程中，我们需要明白，成功并非一蹴而就。它是由无数次失败、反思和再尝试构成的。因此，当我们在追求梦想的路上遇到困难时，不要轻易放弃。相反，应该把每一次挫折看作是学习的机会，从中吸取教训，并且更加坚定地朝着目标前进。同时，我们也应当珍惜身边那些支持和鼓励我们的人。他们可能是家人、朋友、老师或者是陌生人。正是有了他们的陪伴和支持，我们才能更有勇气面对生活中的风风雨雨。所以，让我们心怀感恩之心，用实际行动回报那些帮助过我们的人。总之，“每一次努力都让你感动,未来的精彩由此慢慢绽放”这句话不仅仅是一句简单的口号，它蕴含着深刻的人生哲理。它提醒我们要珍惜每一个当下，用心去感受生命中的点滴美好；同时也激励我们在面对困难时不退缩，勇往直前。因为只有经历了风雨洗礼后的彩虹，才会显得格外绚丽多彩。<|endoftext|>'"
       ]
      },
-     "execution_count": 663,
+     "execution_count": 899,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 664,
+   "execution_count": 900,
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 665,
+   "execution_count": 901,
    "metadata": {},
    "outputs": [
     {
@@ -2193,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": 902,
    "metadata": {},
    "outputs": [
     {
@@ -2607,7 +2607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 667,
+   "execution_count": 903,
    "metadata": {},
    "outputs": [
     {
@@ -3022,7 +3022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 668,
+   "execution_count": 904,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3061,7 +3061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 669,
+   "execution_count": 905,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3096,7 +3096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 670,
+   "execution_count": 906,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3120,7 +3120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 671,
+   "execution_count": 907,
    "metadata": {},
    "outputs": [
     {
@@ -3150,7 +3150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 672,
+   "execution_count": 908,
    "metadata": {},
    "outputs": [
     {
@@ -3176,7 +3176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 673,
+   "execution_count": 909,
    "metadata": {},
    "outputs": [
     {
@@ -3273,7 +3273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 674,
+   "execution_count": 910,
    "metadata": {},
    "outputs": [
     {
@@ -3334,7 +3334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 675,
+   "execution_count": 911,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3379,7 +3379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 676,
+   "execution_count": 912,
    "metadata": {},
    "outputs": [
     {
@@ -3410,7 +3410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 677,
+   "execution_count": 913,
    "metadata": {},
    "outputs": [
     {
@@ -3438,7 +3438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 678,
+   "execution_count": 914,
    "metadata": {},
    "outputs": [
     {
@@ -3472,7 +3472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 695,
+   "execution_count": 915,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3515,7 +3515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 680,
+   "execution_count": 916,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3536,7 +3536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 681,
+   "execution_count": 917,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3622,7 +3622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": 918,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3672,7 +3672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 684,
+   "execution_count": 919,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3699,7 +3699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 685,
+   "execution_count": 920,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3776,7 +3776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": 921,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3830,7 +3830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": 931,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3870,7 +3870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 932,
    "metadata": {},
    "outputs": [
     {
@@ -3941,12 +3941,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "最后可以按如下方式计算模型的大小："
+    "可以按如下方式计算模型的大小："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 692,
+   "execution_count": 933,
    "metadata": {},
    "outputs": [
     {
@@ -3979,7 +3979,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "这是一个有着85M个参数的模型，下一节我们将训练这个模型。"
+    "- 最后我们完善生成文本的方法 `generate_text_simple`，在每步预测结果中，获取最高的条目作为输出"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 941,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_text_simple(model, idx, max_new_tokens, context_size):\n",
+    "    # idx 是当前上下文中的 (batch, n_tokens) 索引数组\n",
+    "    for _ in range(max_new_tokens):\n",
+    "\n",
+    "        # 如果当前上下文超出支持的上下文大小，则裁剪当前上下文\n",
+    "        # 例如，如果 LLM 仅支持 5 个 token，而上下文大小为 10\n",
+    "        # 那么只有最后 5 个 token 用作上下文\n",
+    "        idx_cond = idx[:, -context_size:] # 获取上下文token\n",
+    "        \n",
+    "        # 获取预测\n",
+    "        with torch.no_grad():\n",
+    "            logits = model(idx_cond) # 通过模型生成后续条目\n",
+    "            \n",
+    "        logits = logits[:, -1, :]   # 获取最后一个条目\n",
+    "\n",
+    "        probas = torch.softmax(logits, dim=-1) # 获取概率\n",
+    "\n",
+    "        idx_next = torch.argmax(probas, dim=-1, keepdim=True) # 选择概率最大的条目\n",
+    "\n",
+    "        idx = torch.cat((idx, idx_next), dim=1) #将下一个预测添加到序列中\n",
+    "\n",
+    "    return idx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "让我们测试一下："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 935,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "encoded: [199, 6, 194, 55, 50, 298, 264, 38, 142, 53]\n",
+      "in_idx.shape: torch.Size([1, 10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer = SimpleTokenizer(vocab=create_vocab(raw_text=raw_text))\n",
+    "\n",
+    "start_text = \"每一次努力都让你感动\"\n",
+    "encoded = tokenizer.encode(start_text)\n",
+    "print(\"encoded:\", encoded)\n",
+    "\n",
+    "in_idx = torch.tensor(encoded).unsqueeze(0)\n",
+    "print(\"in_idx.shape:\", in_idx.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 942,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "输出: tensor([[199,   6, 194,  55,  50, 298, 264,  38, 142,  53,  67,  11, 258,  54,\n",
+      "         178, 159,  54, 178, 159,  54, 178, 159,  54, 178, 159]])\n",
+      "输出长度: 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.eval() # disable dropout\n",
+    "\n",
+    "out = generate_text_simple(\n",
+    "    model=model,\n",
+    "    idx=in_idx, \n",
+    "    max_new_tokens=15, \n",
+    "    context_size=GPT_CONFIG_85M[\"context_length\"]\n",
+    ")\n",
+    "\n",
+    "print(\"输出:\", out)\n",
+    "print(\"输出长度:\", len(out[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "删除批次维度并转换回文本："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 937,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "每一次努力都让你感动受且虹助普接助普接助普接助普接\n"
+     ]
+    }
+   ],
+   "source": [
+    "decoded_text = tokenizer.decode(out.squeeze(0).tolist())\n",
+    "print(decoded_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "请注意，该模型未经训练，因此上面的输出文本是随机的，下一节我们将训练这个模型。"
    ]
   },
   {
